Fixed css error with map covering text at small screen resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,8 @@ body {
   
 }
 
+
+
 .input-boxes {
   width: 100%;
   line-height: 50px;
@@ -181,10 +183,15 @@ input:focus::placeholder {
   box-shadow: none; 
 }
 
+
+.guidelist{
+  color:white;
+}
+
 /*-----------------------MAP */
 
 #map {
-    margin-top: 200px;
+    margin-top: 20px;
     margin-bottom: 20px;
     width: 100%;
     height: 75vh;
@@ -261,3 +268,15 @@ footer {
     color: #09191D;
 }
 
+@media  (max-width: 481px) {
+  #map {
+    margin-top: 200px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 75vh;
+    background: transparent;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+}
